# geekcon-ai-2024

./: .gitignore  README.md  client.py  exploit.py,bak  pyproject.toml  stackoverflow_demo.c  test.py
src/geekcon/: __init__.py  __main__.py  depends.py  question.py  state.py  utils.py
src/geekcon/challenge/: __init__.py  pentest.py  pwn.py
src/geekcon/chat/: __init__.py  cmdi_exp.py  common_exploit.py  fileinclude_exp.py  formatstr_exp.py  leak_info.py  leak_type.py  possible_ep.py  sql_exp.py  stackoverflow_exp.py  type_and_line.py  vuln_line.py  vuln_type.py
tests/: test_attack.py  test_pentest.py  test_pwn.py
tests/assets/: change_avatar.php  code_inject_demo.c  format_demo.c  pentest_result.json  sql_inject.php
