[project]
name = "geekcon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SilentE", email = "silenteags@gmail.com" }
]
dependencies = [
    "openai>=1.51.2",
    "fastapi>=0.115.2",
    "uvicorn>=0.31.1",
    "requests>=2.32.3",
    "loguru>=0.7.2",
    "asyncio>=3.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"geekcon" = "geekcon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geekcon"]
